# metapy

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  get-release.py  make-release.sh  setup.py
examples/: query_runner.py
include/: metapy_analyzers.h  metapy_classify.h  metapy_embeddings.h  metapy_identifiers.h  metapy_index.h  metapy_learn.h  metapy_parser.h  metapy_probe_map.h  metapy_sequence.h  metapy_stats.h  metapy_topics.h
src/: metapy.cpp  metapy_analyzers.cpp  metapy_classify.cpp  metapy_embeddings.cpp  metapy_index.cpp  metapy_learn.cpp  metapy_parser.cpp  metapy_sequence.cpp  metapy_stats.cpp  metapy_topics.cpp
travis/: build_linux.sh  build_linux_wheel.sh  build_osx.sh  clean_build.sh  install_linux.sh  install_osx.sh
tutorials/: 1-analyzers-tokenizers-filters.ipynb  2-search-and-ir-eval.ipynb  3-deeper-text-analysis.ipynb  4-classification.ipynb  5-topic-modeling.ipynb  KDD 2017.ipynb  apnews-config.toml  ceeaus-config.toml  config.toml  nips.toml  sigir18-topic-models.ipynb
tutorials/sigir18-topic-models/: sigir18-retrieval.ipynb  sigir18-topic-models.ipynb
